--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ dependencies = [
     "transformers>=4.40.0",
     "pillow>=10.0.0",
     "numpy>=1.24.0",
+    "psutil>=5.9.0",
 ]
 
 [project.optional-dependencies]
@@ -37,6 +38,13 @@ dev = [
     "isort>=5.12.0",
     "mypy>=1.5.0",
     "pre-commit>=3.3.0",
+    "pytest-benchmark>=4.0.0",
+    "pytest-mock>=3.11.0",
+]
+cli = [
+    "click>=8.1.0",
+    "rich>=13.0.0",
+    "typer>=0.9.0",
 ]
 
 [project.urls]
@@ -68,3 +76,6 @@ python_version = "3.10"
 warn_return_any = true
 warn_unused_configs = true
 disallow_untyped_defs = true
+
+[project.scripts]
+fastvlm = "fast_vlm_ondevice.cli:main"
